--- a/CreditApp/Storyboard/Home.storyboard
+++ b/CreditApp/Storyboard/Home.storyboard
@@ -41,7 +41,7 @@
                                 </constraints>
                             </view>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" pagingEnabled="YES" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="jKL-8Q-fQ5">
-                                <rect key="frame" x="4" y="97.000000000000028" width="385" height="340.66666666666674"/>
+                                <rect key="frame" x="4" y="96.999999999999986" width="385" height="255.66666666666663"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="0.0" minimumInteritemSpacing="0.0" id="RiO-4R-ft2">
                                     <size key="itemSize" width="128" height="128"/>
@@ -55,6 +55,21 @@
                                     <outlet property="delegate" destination="MbO-Rn-w6r" id="yap-j0-aVL"/>
                                 </connections>
                             </collectionView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0VT-1k-pKz">
+                                <rect key="frame" x="96" y="419" width="201" height="48"/>
+                                <color key="backgroundColor" red="0.12549019607843137" green="0.19215686274509802" blue="0.37647058823529411" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="48" id="i2z-Vv-tTD"/>
+                                </constraints>
+                                <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" title="Pay credit">
+                                    <fontDescription key="titleFontDescription" type="system" pointSize="20"/>
+                                </buttonConfiguration>
+                                <connections>
+                                    <action selector="payButton:" destination="MbO-Rn-w6r" eventType="touchUpInside" id="Bo2-Qc-v7J"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="jix-KR-7ac"/>
                         <color key="backgroundColor" name="main_bg_color"/>
@@ -63,14 +78,18 @@
                             <constraint firstItem="HzB-T2-fi2" firstAttribute="leading" secondItem="jix-KR-7ac" secondAttribute="leading" id="8sP-VP-pZ2"/>
                             <constraint firstItem="HzB-T2-fi2" firstAttribute="top" secondItem="JNm-Nt-H6O" secondAttribute="top" id="DlH-eg-pO3"/>
                             <constraint firstItem="jKL-8Q-fQ5" firstAttribute="top" secondItem="HzB-T2-fi2" secondAttribute="bottom" constant="4" id="TkH-NX-tjg"/>
-                            <constraint firstItem="jKL-8Q-fQ5" firstAttribute="height" secondItem="JNm-Nt-H6O" secondAttribute="height" multiplier="0.4" id="cWR-VE-9vy"/>
+                            <constraint firstItem="0VT-1k-pKz" firstAttribute="leading" secondItem="jix-KR-7ac" secondAttribute="leading" constant="96" id="Xz9-rh-hew"/>
+                            <constraint firstItem="0VT-1k-pKz" firstAttribute="top" secondItem="jKL-8Q-fQ5" secondAttribute="bottom" constant="66.333333333333258" id="Zcc-vi-k9O"/>
+                            <constraint firstItem="jKL-8Q-fQ5" firstAttribute="height" secondItem="JNm-Nt-H6O" secondAttribute="height" multiplier="0.3" id="cWR-VE-9vy"/>
                             <constraint firstItem="jix-KR-7ac" firstAttribute="trailing" secondItem="jKL-8Q-fQ5" secondAttribute="trailing" constant="4" id="fNG-wc-69i"/>
                             <constraint firstItem="jix-KR-7ac" firstAttribute="trailing" secondItem="HzB-T2-fi2" secondAttribute="trailing" id="uTN-H7-hsU"/>
+                            <constraint firstItem="jix-KR-7ac" firstAttribute="trailing" secondItem="0VT-1k-pKz" secondAttribute="trailing" constant="96" id="vVm-Ps-7aK"/>
                         </constraints>
                     </view>
                     <tabBarItem key="tabBarItem" title="Home" image="house" catalog="system" id="MMi-zQ-V2r"/>
                     <connections>
                         <outlet property="collection" destination="jKL-8Q-fQ5" id="MBu-oo-Jtj"/>
+                        <outlet property="payButton" destination="0VT-1k-pKz" id="Vtz-hk-3Tm"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ggc-ob-Hh4" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
