--- a/CreditApp/Storyboard/Base.lproj/Login.storyboard
+++ b/CreditApp/Storyboard/Base.lproj/Login.storyboard
@@ -18,7 +18,7 @@
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Vky-ZG-M2L">
                                 <rect key="frame" x="0.0" y="0.0" width="430" height="93.333333333333329"/>
-                                <color key="backgroundColor" red="0.12549019610000001" green="0.19215686269999999" blue="0.37647058820000001" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                <color key="backgroundColor" name="signUpBorder"/>
                             </view>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Debet" translatesAutoresizingMaskIntoConstraints="NO" id="NLl-7l-WLv">
                                 <rect key="frame" x="150.66666666666666" y="105.33333333333333" width="128.99999999999997" height="186.33333333333337"/>
@@ -76,7 +76,7 @@
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dAm-UW-Dz9">
                                         <rect key="frame" x="0.0" y="0.0" width="382" height="48"/>
-                                        <color key="backgroundColor" red="0.12549019610000001" green="0.19215686269999999" blue="0.37647058820000001" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                        <color key="backgroundColor" name="signUpBorder"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="48" id="Tlo-d5-mcW"/>
                                         </constraints>
@@ -95,7 +95,7 @@
                                         <constraints>
                                             <constraint firstAttribute="height" constant="48" id="J5e-1q-3Rp"/>
                                         </constraints>
-                                        <color key="tintColor" red="0.10095015910000001" green="0.15527546410000001" blue="0.30197733640000002" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                        <color key="tintColor" name="signUpBorder"/>
                                         <state key="normal" title="Button"/>
                                         <buttonConfiguration key="configuration" style="plain" title="Sign Up">
                                             <fontDescription key="titleFontDescription" type="system" pointSize="20"/>
@@ -158,7 +158,7 @@
                                         </connections>
                                     </button>
                                 </subviews>
-                                <color key="backgroundColor" red="0.12549019607843137" green="0.19215686274509802" blue="0.37647058823529411" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                <color key="backgroundColor" name="signUpBorder"/>
                                 <constraints>
                                     <constraint firstAttribute="bottom" secondItem="Tg3-wZ-h8c" secondAttribute="bottom" constant="10" id="6Tm-Vs-v9x"/>
                                     <constraint firstItem="Tg3-wZ-h8c" firstAttribute="leading" secondItem="2GF-r7-eeB" secondAttribute="leading" constant="4" id="93N-1O-OBd"/>
@@ -263,7 +263,7 @@
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Xco-7E-boo">
                                         <rect key="frame" x="0.0" y="0.0" width="382" height="48"/>
-                                        <color key="backgroundColor" red="0.12549019610000001" green="0.19215686269999999" blue="0.37647058820000001" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                        <color key="backgroundColor" name="signUpBorder"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="48" id="iU4-MX-QAO"/>
                                         </constraints>
@@ -317,6 +317,9 @@
         <image name="chevron.backward" catalog="system" width="97" height="128"/>
         <namedColor name="main_bg_color">
             <color red="0.9882352941176471" green="0.97647058823529409" blue="0.93333333333333335" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <namedColor name="signUpBorder">
+            <color red="0.12549019607843137" green="0.19215686274509805" blue="0.37647058823529411" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
     </resources>
 </document>
